--- a/assets/style.scss
+++ b/assets/style.scss
@@ -43,7 +43,21 @@ h3 {
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 
     li {
+      position: relative;
       padding: 5px 10px;
+
+
+      .todo-actions {
+        // visibility: hidden;
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 5px 10px;
+      }
+
+      &:hover .todo-actions {
+        visibility: visible;
+      }
     }
   }
 }
