--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,7 @@ h3 {
     border-bottom-left-radius: 0;
     border-left: 0; }
   .todo-container ul.todo-list {
+    background-color: #ffffff;
     font-family: "Source Code Pro", "courrier-new";
     padding: 0;
     list-style-type: none;
@@ -30,11 +31,14 @@ h3 {
       position: relative;
       padding: 5px 10px; }
       .todo-container ul.todo-list li .todo-actions {
+        visibility: hidden;
         position: absolute;
         right: 0;
         top: 0;
         padding: 5px 10px; }
-      .todo-container ul.todo-list li:hover .todo-actions {
-        visibility: visible; }
+      .todo-container ul.todo-list li:hover {
+        background-color: #f2f2f2; }
+        .todo-container ul.todo-list li:hover .todo-actions {
+          visibility: visible; }
 
 /*# sourceMappingURL=style.css.map */
