--- a/assets/style.scss
+++ b/assets/style.scss
@@ -38,22 +38,23 @@ h3 {
 
   ul.todo-list {
     background-color: $todo-box-color;
-    font-family: $font-monospace;
     padding: 0;
     list-style-type: none;
-    background-color: #ffffff;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 
     li {
       position: relative;
       padding: 5px 10px;
 
+      .todo-title {
+        font-family: $font-monospace;
+      }
+
       .todo-actions {
         visibility: hidden;
         position: absolute;
         right: 0;
         top: 0;
-        padding: 5px 10px;
       }
 
       &:hover {
@@ -61,6 +62,30 @@ h3 {
 
         .todo-actions {
           visibility: visible;
+        }
+      }
+    }
+
+    .dropdown-toggle {
+      padding: 5px 8px;
+      cursor: pointer;
+
+      &:hover {
+        background: darken($todo-box-color, 10%);
+      }
+    }
+
+    .dropdown-menu {
+      padding: 0;
+      margin: 0;
+      border-radius: 0;
+      border: 0;
+
+      li > a {
+        padding: 0;
+
+        &:hover {
+          background-color: inherit;
         }
       }
     }
