--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,8 @@
 /* General CSS */
 body {
   font-family: "Roboto", "sans-serif";
-  background-color: #e8e8e8; }
+  background-color: #e8e8e8;
+  color: #292929; }
 
 h1,
 h2,
@@ -39,6 +40,9 @@ h3 {
         background-color: #f2f2f2; }
         .todo-container ul.todo-list li:hover .todo-actions {
           visibility: visible; }
+      .todo-container ul.todo-list li.is-done .todo-title {
+        text-decoration: line-through;
+        color: darkgray; }
     .todo-container ul.todo-list .dropdown-toggle {
       padding: 5px 8px;
       cursor: pointer; }
