--- a/assets/style.css
+++ b/assets/style.css
@@ -37,11 +37,6 @@ h3 {
           display: block; }
       .todo-container ul.todo-list li.todo-element .todo-title {
         font-family: "Source Code Pro", "courrier-new"; }
-      .todo-container ul.todo-list li.todo-element .todo-actions {
-        visibility: hidden;
-        position: absolute;
-        right: 0;
-        top: 0; }
       .todo-container ul.todo-list li.todo-element:hover {
         background-color: #f2f2f2; }
         .todo-container ul.todo-list li.todo-element:hover .todo-actions {
@@ -49,19 +44,16 @@ h3 {
       .todo-container ul.todo-list li.todo-element.is-done .todo-title {
         text-decoration: line-through;
         color: darkgray; }
-    .todo-container ul.todo-list .dropdown-toggle {
-      padding: 5px 8px;
-      cursor: pointer; }
-      .todo-container ul.todo-list .dropdown-toggle:hover {
+    .todo-container ul.todo-list .todo-actions {
+      visibility: hidden;
+      position: absolute;
+      right: 0;
+      top: 0; }
+      .todo-container ul.todo-list .todo-actions a {
+        display: block;
+        color: #d32f2f;
+        padding: 5px 8px; }
+      .todo-container ul.todo-list .todo-actions:hover {
         background: #e6e6e6; }
-    .todo-container ul.todo-list .dropdown-menu {
-      padding: 0;
-      margin: 0;
-      border-radius: 0;
-      border: 0; }
-      .todo-container ul.todo-list .dropdown-menu li > a {
-        padding: 5px 10px; }
-        .todo-container ul.todo-list .dropdown-menu li > a:hover {
-          background-color: #f2f2f2; }
 
 /*# sourceMappingURL=style.css.map */
