--- a/assets/style.scss
+++ b/assets/style.scss
@@ -6,6 +6,7 @@ $font-monospace: 'Source Code Pro', 'courrier-new';
 $font-normal: '400';
 $font-bold: '500';
 $text-color: #292929;
+$red: #d32f2f;
 
 
 /* General CSS */
@@ -62,13 +63,6 @@ h3 {
         font-family: $font-monospace;
       }
 
-      .todo-actions {
-        visibility: hidden;
-        position: absolute;
-        right: 0;
-        top: 0;
-      }
-
       &:hover {
         background-color: darken($todo-box-color, 5%);
 
@@ -83,27 +77,21 @@ h3 {
       }
     }
 
-    .dropdown-toggle {
-      padding: 5px 8px;
-      cursor: pointer;
 
+    .todo-actions {
+      visibility: hidden;
+      position: absolute;
+      right: 0;
+      top: 0;
+
+      a {
+        display: block;
+        color: $red;
+        padding: 5px 8px;
+      }
+      
       &:hover {
         background: darken($todo-box-color, 10%);
-      }
-    }
-
-    .dropdown-menu {
-      padding: 0;
-      margin: 0;
-      border-radius: 0;
-      border: 0;
-
-      li > a {
-        padding: 5px 10px;
-
-        &:hover {
-          background-color: darken($todo-box-color, 5%);
-        }
       }
     }
   }
